test/src/e2e_vm_tests/test_programs/should_fail/impl_private_method/src/main.sw
script;

dep lib;

use lib::*;

fn main() {
    MyStruct { x: 42 }.foo();


    MyStruct::bar();
}